--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -70,28 +70,28 @@ description: |
 
   zipdetails: Displays details about the internal structure of a Zip file
 
-in:
+var:
   version: 5.34.0
 
 provision:
   - url:
-      from: https://www.cpan.org/src/5.0/perl-{% version %}.tar.xz
-      todir: "{% xbeeSrc %}"
+      from: https://www.cpan.org/src/5.0/perl-{{ .version }}.tar.xz
+      todir: "{{ .xbee.src }}"
   - url:
-      from: https://www.linuxfromscratch.org/patches/lfs/11.0/perl-{% version %}-upstream_fixes-1.patch
-      todir: "{% xbeeSrc %}"
+      from: https://www.linuxfromscratch.org/patches/lfs/11.0/perl-{{ .version }}-upstream_fixes-1.patch
+      todir: "{{ .xbee.src }}"
       unpack: false
 
 build:
   - shell:
       cmds:
-        - patch -Np1 -i ../perl-{% version %}-upstream_fixes-1.patch
+        - patch -Np1 -i ../perl-{{ .version }}-upstream_fixes-1.patch
         - sh Configure 
              -des
              -Dprefix=/usr
              -Duserelocatableinc
          - make
 #        - make test
-        - make install DESTDIR={% xbeeOut %}
-      directory: "{% xbeeSrc %}/perl-{% version %}"
+        - make install DESTDIR={{ .xbee.out }}
+      directory: "{{ .xbee.src }}/perl-{{ .version }}"
 
